[package]
name = "pgmer2serv"
version = "0.0.1"
edition = "2021"

[features]
shared = []

[dependencies]
rand = "=0.8.4"
petgraph = "0.6.3"
uuid = "1.3.3"
indexmap = "2.0.0"
once_cell = "1.8.0"
lazy_static = "1.4"
thiserror = "1.0.29"
serde = "1.0.166"
regex = "1.9.1"

parking_lot = "0.12.1"
nng = "1.0.1"
rmp-serde = "1.1.2"

dotenv = { version = "0.15.0" }


[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
