[package]
name = "tsv2graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
serde = "1.0.166"
serde_derive = "1.0.166"
#itertools = "0.12.0"
nng = "1.0.1"
rmp-serde = "1.1.2"
tsv = "0.1.1"
reflection = "0.1.3"
reflection_derive = "0.1"
